[package]
name = "pyoxigraph"
version = "0.4.0-alpha.2"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["RDF", "SPARQL", "graph-database", "database"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/python"
homepage = "https://pyoxigraph.readthedocs.io/"
description = "Python bindings of Oxigraph, a SPARQL database and RDF toolkit"
edition = "2021"
rust-version = "1.70"
publish = false

[lib]
crate-type = ["cdylib"]
name = "pyoxigraph"
doctest = false

[features]
default = ["native-tls"]
abi3 = ["pyo3/abi3-py38"]
native-tls = ["oxigraph/http-client-native-tls"]
rocksdb-pkg-config = ["oxigraph/rocksdb-pkg-config"]
rustls = ["oxigraph/http-client-rustls-native"]

[dependencies]
oxigraph.path = "../lib"
pyo3 = { version = "0.20.1", features = ["extension-module"] }

[lints]
workspace = true
