[package]
name = "pyoxigraph"
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["RDF", "SPARQL", "graph-database", "database"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/python"
homepage = "https://pyoxigraph.readthedocs.io/"
description = "Python bindings of Oxigraph, a SPARQL database and RDF toolkit"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
name = "pyoxigraph"
doctest = false
doc = false

[features]
default = ["geosparql", "rdf-12"]
abi3 = ["pyo3/abi3-py38"]
rocksdb-pkg-config = ["oxigraph/rocksdb-pkg-config"]
geosparql = ["dep:spargeo"]
rdf-12 = ["oxigraph/rdf-12"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module"] } # TODO: remove the feature in a few months
spargeo = { workspace = true, optional = true }

[target.'cfg(any(target_family = "windows", target_os = "macos", target_os = "ios"))'.dependencies]
oxigraph = { workspace = true, features = ["http-client-native-tls"] }

[target.'cfg(target_family = "wasm")'.dependencies]
oxigraph.workspace = true

[target.'cfg(not(any(target_family = "windows", target_os = "macos", target_os = "ios", target_family = "wasm")))'.dependencies]
oxigraph = { workspace = true, features = ["http-client-rustls-native"] }

[lints]
workspace = true
