[build-system]
requires = ["maturin~=1.0"]
build-backend = "maturin"

[project]
# Most of the metadata are in Cargo.toml and injected by maturin
name = "pyoxigraph"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[project.urls]
Changelog = "https://github.com/oxigraph/oxigraph/blob/main/CHANGELOG.md"
Documentation = "https://pyoxigraph.readthedocs.io/"
Homepage = "https://pyoxigraph.readthedocs.io/"
Source = "https://github.com/oxigraph/oxigraph/tree/main/python"
Tracker = "https://github.com/oxigraph/oxigraph/issues"

[tool.maturin]
strip = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ARG",
    "B",
    "C40",
    "E",
    "F",
    "FBT",
    "I",
    "ICN",
    "N",
    "PIE",
    "PTH",
    "RET",
    "RUF",
    "SIM",
    "T10",
    "TCH",
    "TID",
    "UP",
    "W",
    "YTT"
]
