[package]
name = "oxigraph_server"
version = "0.3.13"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/oxigraph/oxigraph/tree/main/server"
homepage = "https://oxigraph.org/server/"
description = """
Oxigraph SPARQL HTTP server
"""
edition = "2021"
rust-version = "1.60"

[dependencies]
anyhow = "1"
oxhttp = { version = "0.1", features = ["rayon"] }
clap = { version = "=4.0", features = ["derive"] }
clap_lex = "=0.3.0"
oxigraph = { version = "0.3.13", path = "../lib", features = ["http_client"] }
sparesults = { version = "0.1.6", path = "../lib/sparesults", features = ["rdf-star"] }
rand = "0.8"
url = "2"
oxiri = "0.2"
flate2 = "1"
rayon-core = "1"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
escargot = "0.5"
ignore = "=0.4.18"
predicates = "2"
