[package]
name = "oxigraph-testsuite"
version = "0.0.0"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
description = """
Implementation of W3C testsuites for Oxigraph
"""
edition = "2021"
rust-version = "1.70"
publish = false

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.0", features = ["derive"] }
oxigraph.path = "../lib"
oxttl.path = "../lib/oxttl"
sparopt.path = "../lib/sparopt"
spargebra.path = "../lib/spargebra"
text-diff = "0.4"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
codspeed-criterion-compat = "2.3.3"

[lints]
workspace = true

[[bench]]
name = "parser"
harness = false