[package]
name = "oxigraph-testsuite"
version = "0.0.0"
authors.workspace = true
license.workspace = true
description = """
Implementation of W3C testsuites for Oxigraph
"""
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
json-ld.workspace = true
json-event-parser.workspace = true
oxigraph.workspace = true
oxiri.workspace = true
oxttl.workspace = true
spargebra.workspace = true
spargeo.workspace = true
sparopt.workspace = true
spareval.workspace = true
text-diff.workspace = true
time = { workspace = true, features = ["formatting"] }

[dev-dependencies]
codspeed-criterion-compat.workspace = true

[lints]
workspace = true

[[bench]]
name = "parser"
harness = false
