[package]
name = "oxigraph_wikibase"
version = "0.1.0"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/oxigraph/oxigraph"
description = """
SPARQL server based on Oxigraph for Wikibase instances
"""
edition = "2018"

[dependencies]
argh = "0.1"
async-std = { version = "1", features = ["attributes"] }
async-h1 = "2"
chrono = "0.4"
http-client = { version = "4", features = ["h1_client"] }
http-types = "2"
oxigraph = { path = "../lib", features = ["rocksdb"] }
serde_json = "1"
url = "2"