[package]
name = "oxigraph_wikibase"
version = "0.2.5"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/oxigraph/oxigraph/tree/master/wikibase"
description = """
Oxigraph SPARQL server for Wikibase
"""
edition = "2018"

[dependencies]
clap = "2"
async-std = { version = "1", features = ["attributes"] }
async-h1 = "2"
chrono = "0.4"
http-client = { version = "6", features = ["h1_client"] }
http-types = "2"
oxigraph = { version = "0.2", path ="../lib", features = ["rocksdb", "http_client"] }
serde_json = "1"
url = "2"