[package]
name = "criterion-bench"
version = "0.2.4"
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = []
repository = "https://github.com/oxigraph/oxigraph/tree/main/bench/criterion"
description = """
A library providing basic data structures related to RDF
"""
documentation = "https://docs.rs/oxrdf"
edition.workspace = true
rust-version.workspace = true

[dependencies]
oxrdf = { workspace = true, features = ["serde", "rdf-star"] }
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
# Ideally this would be an optional dependency, used only when the `serde` feature is enabled.
# However, optional dev-dependencies are not currently supported by cargo.
# See https://github.com/rust-lang/cargo/issues/1596
serde_json = { version = "1.0.138" }

[lints]
workspace = true

[[bench]]
name = "serde_bench"
harness = false
