[package]
name = "oxigraph"
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["RDF", "SPARQL", "graph-database", "database"]
categories = ["database-implementations"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/lib/oxigraph"
homepage = "https://oxigraph.org/"
documentation = "https://docs.rs/oxigraph"
description = "SPARQL database and RDF toolkit"
edition.workspace = true
rust-version.workspace = true

[features]
default = ["rocksdb"]
rocksdb = ["oxrocksdb-sys"]
js = ["getrandom/wasm_js", "oxsdatatypes/js", "js-sys"]
http-client = ["oxhttp"]
http-client-native-tls = ["http-client", "oxhttp/native-tls"]
http-client-rustls-webpki = ["http-client", "oxhttp/rustls-ring-webpki"]
http-client-rustls-native = ["http-client", "oxhttp/rustls-ring-native"]
rocksdb-pkg-config = ["oxrocksdb-sys/pkg-config"]
rocksdb-debug = []
rdf-12 = ["oxrdfio/rdf-12", "spareval/sparql-12"]
# Persistent WKB-encoded storage for GeoSPARQL wktLiteral values. Issue #1560.
# When enabled, geometry literals are parsed once on insert, stored as binary
# WKB inline (for 2D points) or in a side blob CF (for polygons and longer
# geometries), and exposed back as either lexical WKT or a parsed
# geo::Geometry without the per-call WKT lexer round trip.
geosparql = ["dep:geo", "dep:geo-traits", "dep:wkb", "dep:wkt"]

[dependencies]
dashmap.workspace = true
geo = { workspace = true, optional = true }
geo-traits = { workspace = true, optional = true }
oxiri.workspace = true
oxrdf = { workspace = true, features = ["oxsdatatypes", "rdfc-10"] }
oxrdfio.workspace = true
oxsdatatypes.workspace = true
rand.workspace = true
rustc-hash.workspace = true
siphasher.workspace = true
sparesults.workspace = true
spargebra = { workspace = true, features = ["sep-0002", "sep-0006"] }
spareval = { workspace = true, features = [
  "sep-0002",
  "sep-0006",
  "calendar-ext",
] }
thiserror.workspace = true
wkb = { workspace = true, optional = true }
wkt = { workspace = true, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
libc.workspace = true
oxhttp = { workspace = true, optional = true }
oxrocksdb-sys = { workspace = true, optional = true }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
getrandom.workspace = true
js-sys = { workspace = true, optional = true }
rand = "0.9"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
codspeed-criterion-compat.workspace = true
csv.workspace = true
oxhttp = { workspace = true, features = ["rustls-ring-native"] }
bzip2.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "store"
harness = false
required-features = ["rocksdb"]
