[package]
name = "oxrdf"
version = "0.2.4"
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["RDF"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/lib/oxrdf"
description = """
A library providing basic data structures related to RDF
"""
documentation = "https://docs.rs/oxrdf"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
rdf-star = []
serde = ["dep:serde"]

[dependencies]
oxilangtag.workspace = true
oxiri.workspace = true
oxsdatatypes = { workspace = true, optional = true }
rand.workspace = true
thiserror.workspace = true
serde = { version = "1.0.217", features = ["derive"], optional = true}

[dev-dependencies]
# Ideally this would be an optional dependency, used only when the `serde` feature is enabled.
# However, optional dev-dependencies are not currently supported by cargo.
# See https://github.com/rust-lang/cargo/issues/1596
serde_json = { version = "1.0.134" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
