[package]
name = "oxrdfxml"
version = "0.1.0-alpha.1-dev"
authors.workspace  = true
license.workspace  = true
readme = "README.md"
keywords = ["RDFXML", "XML", "RDF"]
repository = "https://github.com/oxigraph/oxigraph/tree/master/lib/oxrdfxml"
homepage.workspace  = true
description = """
Parser for the RDF/XML language
"""
documentation = "https://docs.rs/oxrdfxml"
edition.workspace  = true
rust-version.workspace  = true

[features]
default = []
async-tokio = ["dep:tokio", "quick-xml/async-tokio"]

[dependencies]
oxrdf = { version = "0.2.0-alpha.1-dev", path = "../oxrdf" }
oxilangtag = "0.1"
oxiri = "0.2"
quick-xml = "0.30"
tokio = { version = "1", optional = true, features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
