[package]
name = "oxrdfxml"
version = "0.1.0-alpha.1"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["RDFXML", "XML", "RDF"]
repository = "https://github.com/oxigraph/oxigraph/tree/master/lib/oxrdfxml"
description = """
Parser and serializer for the RDF/XML format
"""
documentation = "https://docs.rs/oxrdfxml"
edition = "2021"
rust-version = "1.70"

[features]
default = []
async-tokio = ["dep:tokio", "quick-xml/async-tokio"]

[dependencies]
oxrdf = { version = "0.2.0-alpha.1", path = "../oxrdf" }
oxilangtag = "0.1"
oxiri = "0.2.3-alpha.1"
quick-xml = ">=0.29, <0.32"
tokio = { version = "1.29", optional = true, features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.29", features = ["rt", "macros"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
