[package]
name = "oxsdatatypes"
version = "0.2.0-alpha.1"
authors.workspace  = true
license.workspace  = true
readme = "README.md"
keywords = ["XSD"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/lib/oxsdatatypes"
homepage.workspace  = true
description = """
An implementation of some XSD datatypes for SPARQL implementations
"""
documentation = "https://docs.rs/oxsdatatypes"
edition.workspace  = true
rust-version.workspace  = true

[features]
js = ["js-sys"]
custom-now = []

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
js-sys = { version = "0.3.60", optional = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
