[package]
name = "oxsdatatypes"
version = "0.2.0-alpha.1"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["XSD"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/lib/oxsdatatypes"
description = """
An implementation of some XSD datatypes for SPARQL implementations
"""
documentation = "https://docs.rs/oxsdatatypes"
edition = "2021"
rust-version = "1.70"

[features]
js = ["js-sys"]
custom-now = []

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
js-sys = { version = "0.3.60", optional = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
