[package]
name = "oxsdatatypes"
version = "0.2.2"
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["XSD"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/lib/oxsdatatypes"
description = "Some XSD datatypes for SPARQL implementations"
documentation = "https://docs.rs/oxsdatatypes"
edition.workspace = true
rust-version.workspace = true

[features]
js = ["js-sys"]
custom-now = []

[dependencies]
thiserror.workspace = true

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
js-sys = { workspace = true, optional = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
