[package]
name = "oxttl"
version = "0.1.0-alpha.1-dev"
authors.workspace  = true
license.workspace  = true
readme = "README.md"
keywords = ["N-Triples", "N-Quads", "Turtle", "TriG", "N3"]
repository = "https://github.com/oxigraph/oxigraph/tree/master/lib/oxttl"
homepage.workspace  = true
description = """
Parser for languages related to RDF Turtle (N-Triples, N-Quads, Turtle, TriG and N3)
"""
documentation = "https://docs.rs/oxttl"
edition.workspace  = true
rust-version.workspace  = true

[features]
default = []
rdf-star = ["oxrdf/rdf-star"]
async-tokio = ["dep:tokio"]

[dependencies]
memchr = "2"
oxrdf = { version = "0.2.0-alpha.1-dev", path = "../oxrdf" }
oxiri = "0.2"
oxilangtag = "0.1"
tokio = { version = "1", optional = true, features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
