[package]
name = "sparesults"
version = "0.2.0-alpha.1-dev"
authors.workspace  = true
license.workspace  = true
readme = "README.md"
keywords = ["SPARQL"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/lib/sparesults"
homepage.workspace  = true
description = """
SPARQL query results formats parsers and serializers
"""
documentation = "https://docs.rs/sparesults"
edition.workspace  = true
rust-version.workspace  = true

[features]
default = []
rdf-star = ["oxrdf/rdf-star"]

[dependencies]
json-event-parser = "0.1"
memchr = "2.5"
oxrdf = { version = "0.2.0-alpha.1-dev", path="../oxrdf" }
quick-xml = ">=0.29, <0.31"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
