[package]
name = "sparesults"
version = "0.3.0-beta.4"
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["SPARQL"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/lib/sparesults"
description = "SPARQL query results formats parsers and serializers"
documentation = "https://docs.rs/sparesults"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
sparql-12 = ["oxrdf/rdf-12"]
async-tokio = ["dep:tokio", "quick-xml/async-tokio", "json-event-parser/async-tokio"]

[dependencies]
json-event-parser.workspace = true
memchr.workspace = true
oxrdf.workspace = true
quick-xml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true, features = ["io-util"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
