[package]
name = "spareval"
version = "0.2.0-beta.5"
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["SPARQL"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/lib/spareval"
documentation = "https://docs.rs/spareval"
description = "SPARQL evaluator"
edition.workspace = true
rust-version.workspace = true

[features]
default = []
sparql-12 = ["sparopt/sparql-12", "sparesults/sparql-12"]
sep-0002 = ["sparopt/sep-0002"]
sep-0006 = ["sparopt/sep-0006"]
calendar-ext = ["sep-0002"] # Extended calendar arithmetic: gYear, gYearMonth, gMonth, gMonthDay, gDay


[dependencies]
hex.workspace = true
json-event-parser.workspace = true
md-5.workspace = true
oxiri.workspace = true
oxrdf = { workspace = true, features = ["oxsdatatypes"] }
oxsdatatypes.workspace = true
rand.workspace = true
regex.workspace = true
rustc-hash.workspace = true
sha1.workspace = true
sha2.workspace = true
spargebra.workspace = true
sparopt.workspace = true
sparesults.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
