[package]
name = "spargebra"
version = "0.3.5"
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["SPARQL"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/lib/spargebra"
documentation = "https://docs.rs/spargebra"
description = """
A SPARQL parser
"""
edition.workspace = true
rust-version.workspace = true

[features]
default = []
rdf-star = ["oxrdf/rdf-star"]
sep-0002 = []
sep-0006 = []
serde = ["dep:serde", "oxrdf/serde", "oxiri/serde"]
borsh = ["dep:borsh", "oxrdf/borsh"]

[dependencies]
oxilangtag.workspace = true
oxiri.workspace = true
oxrdf.workspace = true
peg.workspace = true
rand.workspace = true
thiserror.workspace = true
serde = { version = "1.0.217", features = ["derive"], optional = true }
borsh = { version = "1.5.7", optional = true, features = ["derive"] }

[dev-dependencies]
# Ideally this would be an optional dependency, used only when the `serde` feature is enabled.

# However, optional dev-dependencies are not currently supported by cargo.
# See https://github.com/rust-lang/cargo/issues/1596
serde_json = { version = "1.0.134" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
